# CODE-Brew

./: .gitignore  CMakeLists.txt  README.md  Study Resources.md  To-Do
CMake/: CMakeLists.txt
compiled all src into one/: main.cpp
src/: features.cpp  features.h  main.cpp
src/Admin UI/: AdminFeatures.cpp  AdminFeatures.h  VoucherSystem.cpp  VoucherSystem.h  adminui.cpp
src/Database/: Database.h  OrderDataBase.cpp  OrderDataBase.h  ReadDb.h  WriteDb.h  database.h
src/User UI/: MenuFunctions.cpp  MenuFunctions.h  VoucherSystem.h  scratch.cpp  userui.cpp
